# skill-picker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_embedding.py
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
examples/claude-code-sample/: .gitignore  README.md  seed.py
examples/claude-code-sample/.claude/: settings.json
examples/claude-code-sample/.claude/commands/: pick-skill.md
examples/claude-code-sample/notes/: sync-explained.md
examples/claude-code-sample/skills/git-bisect-helper/: SKILL.md
examples/claude-code-sample/skills/k8s-debug/: SKILL.md
examples/claude-code-sample/skills/pdf-table-extract/: SKILL.md
examples/claude-code-sample/skills/regex-builder/: SKILL.md
examples/claude-code-sample/skills/sql-explainer/: SKILL.md
presentation/: demonstrations.md  skill-picker-talk.md
specs/001-skill-picker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-skill-picker/checklists/: requirements.md
specs/001-skill-picker/contracts/: cli.md  http-api.md
src/skill_picker/: __init__.py  api.py  cli.py  db.py  embedding.py  errors.py  index.py  models.py  pool.py  service.py
tests/: conftest.py
tests/fixtures/: labeled_queries.json  sample_skills.json
tests/integration/: test_api.py  test_context_efficiency.py  test_performance.py  test_pool_consistency.py  test_retrieval_quality.py  test_score_inspection.py
tests/unit/: test_index.py  test_pool.py
