[project]
name = "vllm-workspace"
version = "0.1.0"
description = "Workspace for building/running vLLM from source on macOS (CPU); hosts the skill-picker demo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# NOTE: vllm is provided by the workspace's from-source build in .venv and is
# intentionally NOT listed here so `pip install -e .` does not try to replace it.
dependencies = [
    "numpy",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
skill-picker = "skill_picker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_picker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
